@@ -40,6 +40,9 @@
 #ifdef HAVE_UNISTD_H
 #include <unistd.h>
 #endif /* HAVE_UNISTD_H */
+#ifdef HAVE_SYS_STAT_H
+#include <sys/stat.h>
+#endif /* NAVE_SYS_STAT_H */
 #include <fcntl.h> /* for open */
 
 #ifdef HAVE_STDBOOL_H
@@ -5439,6 +5442,29 @@ extern int volatile save_playlist_once_before_exit_flag;
 static int CoInitializeOK = 0;
 #endif
 
+static inline bool directory_p(const char* path)
+{
+#if defined ( IA_W32GUI ) || defined ( IA_W32G_SYN )
+    return is_directory(path);
+#else
+    struct stat st;
+    if(stat(path, &st) != -1) return S_ISDIR(st.st_mode);
+    return false;
+#endif
+}
+
+static inline void canonicalize_path(char* path)
+{
+#if defined ( IA_W32GUI ) || defined ( IA_W32G_SYN )
+    directory_from(path);
+#else
+    int len = strlen(path);
+    if(!len || path[len-1]==PATH_SEP) return;
+    path[len] = PATH_SEP;
+    path[len+1] = '\0';
+#endif
+}
+
 #if !defined ANOTHER_MAIN
 #ifdef __W32__ /* Windows */
 #if ( (!defined(IA_W32GUI) || defined(__CYGWIN32__) || defined(__MINGW32__)) && !defined(IA_W32G_SYN) )
@@ -5541,19 +5567,18 @@ int main(int argc, char **argv)
 		return 0;
 	}
 #endif
-	
+#endif
     for(c = 1; c < argc; c++)
     {
-	if(is_directory(argv[c]))
+	if(directory_p(argv[c]))
 	{
 	    char *p;
 	    p = (char *)safe_malloc(strlen(argv[c]) + 2);
 	    strcpy(p, argv[c]);
-	    directory_form(p);
+	    canonicalize_path(p);
 	    argv[c] = p;
 	}
     }
-#endif
 
     if((err = timidity_pre_load_configuration()) != 0)
 	return err;
